identity: fix assign/unassign permissions & scopes, query builder integration